--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "calculator-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ZokirPro.github.io/Calculator-React-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "gh-pages": "^3.1.0",
     "mathjs": "^8.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
